* Escape external string (issue9394)

Version 5.4.9 - 2020-06-16
* Bug fixes (see mercurial logs for details)

Version 5.4.8 - 2020-06-03
* Bug fixes (see mercurial logs for details)

Version 5.4.7 - 2020-05-26
* Bug fixes (see mercurial logs for details)
* Escape external strings (issue9351)

Version 5.4.6 - 2020-05-01
* Bug fixes (see mercurial logs for details)

Version 5.4.5 - 2020-03-15
* Bug fixes (see mercurial logs for details)

Version 5.4.4 - 2020-03-09
* Bug fixes (see mercurial logs for details)
* Add noreferrer noopener to external URL (issue9089)

Version 5.4.3 - 2020-02-02
* Bug fixes (see mercurial logs for details)

Version 5.4.2 - 2019-12-16
* Bug fixes (see mercurial logs for details)

Version 5.4.1 - 2019-12-02
* Bug fixes (see mercurial logs for details)

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Support visual context on tree view
* Support multiselection field
* Support dot notation on PYSON Eval
* Manage sequence
* Add drag and drop on tree views
* Support expand on column
* Set minimal width for columns
* Order Dict keys by sequence
* Support relation fields in domain parser
* Add view modified
* Add Dict widget for tree view

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Add domain inversion for reference fields
* Add list-form view
* Support HTML widget
* Use locale format for data export
* Add day view on calendar
* Add CSV exports into print toolbar
* Display unread and total of notes
* Use resources method
* Rename roundup.url configuration to bug.url
* Use separate XML parser in Views
* Add range selection with Shift-click
* Use between numbers in filter box
* Fill 'to' with 'from' value on filter box
* Add tab domain in URL
* Use properties
* Allow sao classes to use javascript properties
* Improve layout of CSV import/export
* Add support for height and width on notebook
* Use tab key for tab navigation
* Use record and field properties of widget instead of method arguments