@@ -2,6 +2,7 @@ Copyright (C) 2012-2020 Nicolas Évrard.
 Copyright (C) 2012-2020 Cédric Krier.
 Copyright (C) 2012-2014 Bertrand Chenal.
 Copyright (C) 2012-2020 B2CK SPRL.
+Copyright (C) 2019 Jitbit.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
